<resources>
    <string name="app_name">My PC Virtual </string>
    <string name="usuconf">usuario</string>

    <string name="usuario">Usuario</string>
    <string name="Boton">Ingresar</string>
    <string name="derechos">derechos reservados @2021</string>
    <string name="pasword">Contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="sistema">Elige un sistema operativo</string>
    <string name="title_activity_menulateral">menulateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre">nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="registrarse">REGISTRARSE</string>


</resources>