<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".MainActivity"

    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"


        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="261dp"
            android:layout_height="237dp"


            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="25dp"


            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="VectorDrawableCompat"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bordes_botones"


            android:onClick="siguiente"


            android:text="@string/Boton"
            android:textColor="@color/white"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bordes_botones"


            android:onClick="registro"
            android:text="@string/registrar"


            android:textColor="@color/gris"
            app:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="2dp"
            android:text="@string/derechos"


            android:textColor="@color/white" />


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>